// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c20 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c20 p {
  margin: 2.4rem 0;
}

.c20 a,
.c20 a:visited,
.c20 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c20 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c20 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c20 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c20 pre code {
  color: inherit;
  background: inherit;
}

.c20 img {
  max-width: 100%;
}

.c20 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c20 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c20 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem 0;
}

.c20 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c20 ul,
.c20 ol {
  margin: 2.4rem 4.0rem;
}

.c20 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c20 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c20 table td,
.c20 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c20 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c18 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c18 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 .c19 {
  font-size: 1.6rem;
}

.c21 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c6 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c11 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c9 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  border: 0.5rem solid #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c8 {
  margin-top: 6.4rem;
}

.c12 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c17 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c15 .c5 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c15 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c15:hover a {
  color: #dc143c;
}

.c15:hover img {
  opacity: 0.8;
}

.c16 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c13 {
  width: 100%;
}

.c14 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

@media (max-width:768px) {
  .c20 {
    font-size: 2rem;
  }

  .c20 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: -0.5rem;
  }
}

@media (max-width:360px) {
  .c14 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="SystecCG"
                src="https://res.cloudinary.com/projeto-5/image/upload/v1629807677/avivamento_b9ef1501a7.png"
              />
            </a>
          </h1>
        </div>
      </nav>
    </div>
    <div
      class="c8"
    >
      <header
        class="c9"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="SystecCG - Qualidade na gestão"
              src="https://res.cloudinary.com/projeto-5/image/upload/v1629807677/avivamento_b9ef1501a7.png"
            />
          </a>
        </h1>
        <div
          class="c10"
        >
          <h2
            class="c5 c11"
          >
            SystecCG
          </h2>
          <p>
            Qualidade na gestão
          </p>
        </div>
      </header>
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            <a
              href="/post/desperta-igreja"
            >
              <img
                alt="Despertando a igreja"
                class="c16"
                src="https://res.cloudinary.com/projeto-5/image/upload/v1629807677/avivamento_b9ef1501a7.png"
              />
            </a>
            <h2
              class="c5 c11"
            >
              <a
                href="/post/desperta-igreja"
              >
                Despertando a igreja
              </a>
            </h2>
            <p
              class=""
            >
              Estamos avançando no despertar dos últimos dias
            </p>
          </div>
          <div
            class="c15"
          >
            <a
              href="/post/arma-secreta"
            >
              <img
                alt="Jovens e adolescentes como a arma secreta para o avivamento"
                class="c16"
                src="https://res.cloudinary.com/projeto-5/image/upload/v1629156257/jovens_adolescentes_original_409702284c.jpg"
              />
            </a>
            <h2
              class="c5 c11"
            >
              <a
                href="/post/arma-secreta"
              >
                Jovens e adolescentes como a arma secreta para o avivamento
              </a>
            </h2>
            <p
              class=""
            >
              teste
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c17"
    >
      <footer
        class="c18"
      >
        <div
          class="c19 c20"
        >
          <p>
            SystecCG - Qualidade na sua gestão
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c21"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c19 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c19 p {
  margin: 2.4rem 0;
}

.c19 a,
.c19 a:visited,
.c19 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c19 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c19 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c19 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c19 pre code {
  color: inherit;
  background: inherit;
}

.c19 img {
  max-width: 100%;
}

.c19 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c19 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c19 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem 0;
}

.c19 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c19 ul,
.c19 ol {
  margin: 2.4rem 4.0rem;
}

.c19 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c19 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c19 table td,
.c19 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c19 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c17 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c17 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17 .c18 {
  font-size: 1.6rem;
}

.c20 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c6 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c11 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c9 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  border: 0.5rem solid #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c8 {
  margin-top: 6.4rem;
}

.c12 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c16 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c13 {
  width: 100%;
}

.c14 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c15 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

@media (max-width:768px) {
  .c19 {
    font-size: 2rem;
  }

  .c19 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: -0.5rem;
  }
}

@media (max-width:360px) {
  .c15 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="SystecCG"
                src="https://res.cloudinary.com/projeto-5/image/upload/v1629807677/avivamento_b9ef1501a7.png"
              />
            </a>
          </h1>
        </div>
      </nav>
    </div>
    <div
      class="c8"
    >
      <header
        class="c9"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="SystecCG - Qualidade na gestão"
              src="https://res.cloudinary.com/projeto-5/image/upload/v1629807677/avivamento_b9ef1501a7.png"
            />
          </a>
        </h1>
        <div
          class="c10"
        >
          <h2
            class="c5 c11"
          >
            SystecCG
          </h2>
          <p>
            Qualidade na gestão
          </p>
        </div>
      </header>
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <p
          class="c14"
        >
          Nenhum post encontrado aqui =(
        </p>
        <div
          class="c15"
        />
      </div>
    </div>
    <div
      class="c16"
    >
      <footer
        class="c17"
      >
        <div
          class="c18 c19"
        >
          <p>
            SystecCG - Qualidade na sua gestão
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c20"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
